2019-01-07-08:52  gepr  <gepr@tempusdictum.com>

	* research.js: Add modal, modality, and mode to glossary.
