@@ -1,3 +1,7 @@
+2019-01-07-10:01  gepr  <gepr@tempusdictum.com>
+
+	* research.js: Add parallax modeling to the glosary.
+
 2019-01-07-08:52  gepr  <gepr@tempusdictum.com>
 
 	* research.js: Add modal, modality, and mode to glossary.
